--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "express": "^4.21.1",
+    "highlight.js": "^11.10.0",
+    "marked": "^15.0.1",
     "node-fetch": "^3.3.2"
   },
   "repository": {
